<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.danielaguilar.recepies.ui.RecipeStepListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
